# rust_backend_examples

./: README.md
backend_actix/: remember.md
backend_actix/l000 - minimal, costant/: Cargo.toml
backend_actix/l000 - minimal, costant/src/: main.rs  server.rs
backend_actix/l001 - configure, static, html, css/: Cargo.toml
backend_actix/l001 - configure, static, html, css/src/: main.rs
backend_actix/l001 - configure, static, html, css/static/: general.css  index.html
backend_actix/l002/: Cargo.toml
backend_actix/l002 - dotenv, postgres, rpassword/: .env  Cargo.toml
backend_actix/l002 - dotenv, postgres, rpassword/src/: constant.rs  main.rs  mdb.rs  mserver.rs
backend_actix/l002/src/: constant.rs  main.rs
backend_actix/l003 - load db connection from .env/: .env  README.md  fast_db_setup.md
backend_actix/l003 - load db connection from .env/src/: main.rs  mdb.rs  mserver.rs
backend_actix/l003 - load db from .env/: Cargo.toml
backend_actix/l004 - load from schema/: Cargo.toml
backend_actix/l004 - load from schema, insert, select/: Cargo.toml  fast_db_setup.md
backend_actix/l005 - project structure/: Cargo.toml
backend_actix/l005 - project structure, json response (serde)/: .env  Cargo.toml
backend_actix/l005/src/: main.rs  mdb.rs  (+1 more)
backend_actix/l006/: Cargo.toml  README.md  fast_db_setup.md
backend_actix/l006 - error handling/: README.md
backend_actix/l006/sql/: schema.sql
backend_actix/l006/src/: main.rs
backend_actix/l006/src/mdatabase/: mod.rs
backend_actix/l006/src/mserver/: api.rs
backend_actix/l007 -/: Cargo.toml  README.md
(+37 files in other folders)
