[package]
name = "l006"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
actix-rt = "2.7.0"
actix-files = "0.6.1"
dotenv = "0.15.0"
tokio = { version = "1.19.2", features = ["full"] }
serde = "1.0.138"

# idk
serde_json = "1.0.82"
tokio-postgres = { version = "0.7.6", features = ["with-serde_json-1"] }

# if needed
rpassword = "6.0.1"